[package]
name = "text_to_dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
spider = "1.80.75"
scraper = "0.18.1"
url = "2.5.0"
regex = "1.10.3"
reqwest = "0.11.23"
serde_json = "1.0.111"
async-recursion = "1.0.5"
llmchain = "0.1.3"
langchain_rs = "0.0.2"
